Add index.html template for video and image display with socket.io integration
- Created a new HTML template to display a default image and a video.
- Integrated socket.io to handle real-time updates for video playback.
- Added styles for full viewport display and background color.
- Implemented logic to switch between image and video based on socket events.

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,13 +5,20 @@
     <title>Noodle Pack Display</title>
     <script src="/static/js/socket.io.min.js"></script>
     <style>
-        body { margin: 0; background-color: black; }
-        #content { width: 100vw; height: 100vh; object-fit: contain; }
+        body { margin: 0; background-color: black; overflow: hidden; }
+        img, video {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100vw;
+            height: 100vh;
+            object-fit: fill;
+        }
     </style>
 </head>
 <body>
-    <img id="default" src="/static/assets/default.png" id="content" />
-    <video id="video" autoplay muted loop id="content" style="display: none;"></video>
+    <img id="default" src="/static/assets/default.jpg" style="display: block;" />
+    <video id="video" autoplay muted loop style="display: none;"></video>
 
     <script>
         const socket = io();
