Update video element attributes and configure Flask app settings

--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,7 @@
 </head>
 <body>
     <img id="default" src="/static/assets/default.jpg" style="display: block;" />
-    <video id="video" autoplay muted loop style="display: none;"></video>
+    <video id="video" autoplay loop style="display: none;"></video>
 
     <script>
         const socket = io();
